update icons